# Athena

./: .gitignore  CMakeLists.txt  README.md  install_Athena.sh  install_MuVal.sh  install_llvm2KITTeL.sh  run_Athena.sh
Benchmarks/FSE/recursion/Incorrect_Return_2_T/: Incorrect_Return_2_T.cpp
Benchmarks/TermCOMP/C/AProVE_memory_alloca/svcomp_openbsd_cmemrchr_alloca/: svcomp_openbsd_cmemrchr_alloca.c
Benchmarks/TermCOMP/C/AProVE_memory_alloca/svcomp_openbsd_cstrspn_alloca/: svcomp_openbsd_cstrspn_alloca.c
Evaluation Results/: Evaluation Results.xlsx
Evaluation Results/2LS/: witness.graphml
Evaluation Results/2LS/FSE/loop/Adding_Subtracting_Zero_1_NT/: output.txt
Evaluation Results/2LS/FSE/loop/Adding_Subtracting_Zero_1_T/: output.txt
Evaluation Results/2LS/FSE/loop/Adding_Subtracting_Zero_2_NT/: output.txt
Evaluation Results/2LS/FSE/loop/Adding_Subtracting_Zero_2_T/: output.txt
Evaluation Results/2LS/FSE/loop/Adding_Subtracting_Zero_3_NT/: output.txt
Evaluation Results/2LS/FSE/loop/Adding_Subtracting_Zero_3_T/: output.txt
Evaluation Results/2LS/FSE/loop/Adding_Subtracting_Zero_4_NT/: output.txt
Evaluation Results/2LS/FSE/loop/Adding_Subtracting_Zero_4_T/: output.txt
Evaluation Results/2LS/FSE/loop/Adding_Subtracting_Zero_5_NT/: output.txt
Evaluation Results/2LS/FSE/loop/Adding_Subtracting_Zero_5_T/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Bit_Calculation_1_NT/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Bit_Calculation_1_T/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Bit_Calculation_2_NT/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Bit_Calculation_2_T/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Bit_Calculation_3_NT/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Bit_Calculation_3_T/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Control_Statement_1_NT/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Control_Statement_1_T/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Control_Statement_2_NT/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Control_Statement_2_T/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Initialization_1_NT/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Initialization_1_T/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Initialization_2_NT/: output.txt
Evaluation Results/2LS/FSE/loop/Incorrect_Initialization_2_T/: output.txt
Evaluation Results/Athena/: check_UnderflowOverflow.sh
Evaluation Results/Athena/results_UnderflowOverflow/: results_UnderflowOverflow.csv
Evaluation Results/Athena/results_UnderflowOverflow/output/: Counterexample.1.assignment.txt  Counterexample.1.c  Counterexample.1.core.txt  Counterexample.1.harness.c  Counterexample.1.smt2  Counterexample.1.spc  Counterexample.1.txt  Counterexample.1.witness-2.0.yml  Statistics.txt  UsedConfiguration.properties  abstractions.txt  coverage.info  witness-2.0.yml
Evaluation Results/CPAchecker/output/: CPALog.txt  Statistics.txt  UsedConfiguration.properties  abstractions.txt  coverage.info  invariantPrecs.txt  invariants.txt  terminationAnalysisResult.txt  witness-2.0.yml
Evaluation Results/UAutomizer/: UltimateCounterExample.errorpath
Ptr2Arr/: CMakeLists.txt  install_DG.sh
Ptr2Arr/include/bit_expression_visitor_and_rewriter/: bit_expression_action.h  bit_expression_consumer.h  bit_expression_visitor_and_rewriter.h
Ptr2Arr/include/code_visitor_and_rewriter/: code_action.h  code_consumer.h  code_visitor_and_rewriter.h
Ptr2Arr/include/file_writer/: file_writer.h  info.h
Ptr2Arr/include/memory_analysis/: memory_analysis.h  memory_set.h
Ptr2Arr/include/pointer_visitor/: pointer_action.h  pointer_consumer.h  pointer_visitor.h
Ptr2Arr/include/points_to_analysis/: points_to_analysis.h  points_to_set.h
Ptr2Arr/src/: main.cpp
Ptr2Arr/src/bit_expression_visitor_and_rewriter/: bit_expression_action.cpp  bit_expression_consumer.cpp  bit_expression_visitor_and_rewriter.cpp
Ptr2Arr/src/code_visitor_and_rewriter/: code_action.cpp  code_consumer.cpp  code_visitor_and_rewriter.cpp
Ptr2Arr/src/file_writer/: file_writer.cpp  info.cpp
Ptr2Arr/src/memory_analysis/: memory_analysis.cpp
Ptr2Arr/src/pointer_visitor/: pointer_action.cpp  pointer_consumer.cpp  pointer_visitor.cpp
Ptr2Arr/src/points_to_analysis/: points_to_analysis.cpp
SemanticAugmentor/: CMakeLists.txt
SemanticAugmentor/include/: info.h
SemanticAugmentor/include/brace_visitor_and_rewriter/: brace_action.h  brace_consumer.h  brace_visitor_and_rewriter.h
SemanticAugmentor/include/code_visitor_and_rewriter/: code_action.h  code_consumer.h  code_visitor_and_rewriter.h
SemanticAugmentor/include/data_parser/: data.h  data_parser.h
SemanticAugmentor/src/: main.cpp
SemanticAugmentor/src/brace_visitor_and_rewriter/: brace_action.cpp  brace_consumer.cpp  brace_visitor_and_rewriter.cpp
SemanticAugmentor/src/code_visitor_and_rewriter/: code_action.cpp  code_consumer.cpp  code_visitor_and_rewriter.cpp
SemanticAugmentor/src/data_parser/: data_parser.cpp
TypeAnnotator/: CMakeLists.txt
TypeAnnotator/include/bit_variable_visitor/: bit_variable.h  bit_variable_action.h  bit_variable_consumer.h  bit_variable_visitor.h
TypeAnnotator/include/nondet_variable_visitor/: nondet_variable.h  nondet_variable_action.h  nondet_variable_consumer.h  nondet_variable_visitor.h
TypeAnnotator/src/: info.cpp  main.cpp
TypeAnnotator/src/bit_operation_visitor/: bit_operation_action.cpp  bit_operation_visitor.cpp
TypeAnnotator/src/bit_variable_visitor/: bit_variable_action.cpp  bit_variable_consumer.cpp  bit_variable_visitor.cpp
TypeAnnotator/src/nondet_variable_visitor/: nondet_variable_action.cpp  nondet_variable_consumer.cpp  nondet_variable_visitor.cpp
include/bit_operation_visitor/: bit_operation_action.h  bit_operation_consumer.h  bit_operation_visitor.h
include/transform_code/: transform_code.h
src/: main.cpp
src/bit_operation_visitor/: bit_operation_consumer.cpp
src/transform_code/: transform_code.cpp
(+12440 files in other folders)
